update new files