@@ -1,130 +1,176 @@
-# Restaurant Ordering System (Fast Food Chain)
+# NIOT Fast Food Ordering App
 
-## Overview
-This is a simple restaurant ordering system in Java. The program allows users to view menu items (burgers, chicken, and drinks), choose their items, select a quantity, and receive a receipt with the total price.
+Welcome to the **NIOT Fast Food Ordering App**, a user-friendly JavaFX application designed to streamline the process of ordering your favorite fast food items. Whether you're craving a juicy hamburger, crispy fried chicken, or a refreshing drink, our app makes it easy to select, customize, and checkout your order seamlessly.
 
-### Features
-- Display different categories of items (Burgers, Chicken, Drinks).
-- Sort items by price (solo or meal price).
-- Place orders and specify quantities.
-- Print a receipt showing ordered items and their total cost.
+## Table of Contents
 
-## Structure
+- [Features](#features)
+- [Screenshots](#screenshots)
+- [Installation](#installation)
+- [Usage](#usage)
+- [Project Structure](#project-structure)
+- [Contributing](#contributing)
+- [License](#license)
 
-The project is split into multiple classes:
+## Features
 
-1. **App.java**: Main class that starts the program and shows the menu.
-2. **Burger.java**: Defines the `Burger` class with solo and meal prices.
-3. **Chicken.java**: Defines the `Chicken` class with solo and meal prices.
-4. **Drink.java**: Defines the `Drink` class with only solo prices (drinks don't have a meal option).
-5. **Menu.java**: Handles displaying the menu and managing the ordering process.
-6. **MenuCategory.java**: Interface implemented by `Burger`, `Chicken`, and `Drink` to standardize the price methods.
-7. **MenuItem.java**: Holds and initializes the menu data for burgers, chicken, and drinks.
-8. **OrderItem.java**: Stores information about each ordered item (name, price, quantity).
+- **Category Selection**: Browse through different categories such as Burgers, Chicken, and Drinks.
+- **Item Selection**: Easily add items to your cart with a single click.
+- **Cart Management**: View, update, or remove items from your cart in real-time.
+- **Checkout & Receipt**: Generate a detailed receipt with a unique receipt ID and timestamp.
+- **Responsive UI**: Intuitive and visually appealing interface built with JavaFX.
 
----
+## Screenshots
 
-## How It Works
+To provide a better understanding of the application's interface and functionality, here are some screenshots:
 
-### Menu Categories
-- **Burger**: Includes various burger items, each with a solo price and a meal price.
-- **Chicken**: Includes different chicken meals with solo and meal prices.
-- **Drink**: Includes drink items, but only with solo prices.
+### 1. Main Interface
 
-### Menu Display
-- The menu items are sorted by price (either solo price or meal price) and displayed in a readable format with item numbers.
+![Main Interface](screenshots/main_interface.png)
 
-### Ordering Process
-1. The user can select an item by entering its number and specifying the quantity.
-2. For non-drink items, the user can choose between the solo price and the meal price.
-3. The program continuously asks for input until the user types "done".
-4. Once done, the program prints a receipt showing the ordered items and the total cost.
+*The main screen displays category buttons, item list, and order summary.*
 
----
+### 2. Adding Items to Cart
 
-## Flowchart
+![Adding Items](screenshots/adding_items.png)
 
-### 1. Display Menu
-- Show Burger, Chicken, and Drink menus, sorted by price.
-  
-### 2. Place Order
-- User selects items by entering the number and quantity.
-- For non-drinks, the user selects "solo" or "meal" price.
-- Add selected item to the order.
+*Select items from a category to add them to your cart.*
 
-### 3. Print Receipt
-- Display all ordered items with their price and quantity.
-- Calculate the total cost and display it.
+### 3. Order Summary
 
----
+![Order Summary](screenshots/order_summary.png)
 
-## Flowchart (High-Level Overview)
+*View the items in your cart with options to remove them.*
 
-```plaintext
-  +---------------------------+
-  |       Start Program        |
-  +---------------------------+
-             |
-  +---------------------------+
-  |   Display Burger Menu      |
-  +---------------------------+
-             |
-  +---------------------------+
-  |   Display Chicken Menu     |
-  +---------------------------+
-             |
-  +---------------------------+
-  |   Display Drink Menu       |
-  +---------------------------+
-             |
-  +---------------------------+
-  |   Get User Input (Order)   |
-  +---------------------------+
-             |
-  +---------------------------+
-  |   Add Items to Order       |
-  +---------------------------+
-             |
-  +---------------------------+
-  |   Print Receipt            |
-  +---------------------------+
-             |
-  +---------------------------+
-  |       End Program          |
-  +---------------------------+
+### 4. Checkout Receipt
+
+![Checkout Receipt](screenshots/checkout_receipt.png)
+
+*Generate and view a detailed receipt upon checkout.*
+
+> **Note**: To include your screenshots, create a `screenshots` folder in the root directory of your project and add your images there. Replace the placeholder image names (e.g., `banner.png`, `main_interface.png`) with your actual screenshot file names.
+
+## Installation
+
+### Prerequisites
+
+- **Java Development Kit (JDK)**: Ensure you have JDK 8 or higher installed. You can download it from [Oracle](https://www.oracle.com/java/technologies/javase-jdk11-downloads.html) or [OpenJDK](https://openjdk.java.net/).
+- **JavaFX SDK**: Download the JavaFX SDK from [Gluon](https://gluonhq.com/products/javafx/).
+
+### Steps
+
+1. **Clone the Repository**
+
+   ```bash
+   git clone https://github.com/yourusername/niot-fastfood-app.git
+   cd niot-fastfood-app
+   ```
+
+2. **Set Up JavaFX**
+
+   - Extract the JavaFX SDK to a desired location on your system.
+   - Configure your IDE to include JavaFX libraries. For example, in IntelliJ IDEA:
+     - Go to `File` > `Project Structure` > `Libraries`.
+     - Click `+` and add the path to the `lib` folder of the JavaFX SDK.
+
+3. **Build and Run the Application**
+
+   - **Using an IDE**:
+     - Open the project in your preferred IDE (e.g., IntelliJ IDEA, Eclipse).
+     - Ensure that JavaFX is properly configured.
+     - Run the `FastFoodApp.java` file.
+
+   - **Using Command Line**:
+
+     ```bash
+     javac --module-path /path/to/javafx-sdk-XX/lib --add-modules javafx.controls,javafx.fxml *.java
+     java --module-path /path/to/javafx-sdk-XX/lib --add-modules javafx.controls,javafx.fxml FastFoodApp
+     ```
+
+     Replace `/path/to/javafx-sdk-XX/lib` with the actual path to your JavaFX SDK's `lib` directory.
+
+## Usage
+
+1. **Launch the Application**: Run the `FastFoodApp` to open the main interface.
+2. **Select a Category**: Click on one of the category buttons (Burgers, Chicken, Drinks) to view available items.
+3. **Add Items to Cart**: Click on an item from the list to add it to your cart. You can add multiple quantities of the same item.
+4. **View Order Summary**: The right panel displays your current cart items. You can remove items by clicking the "X" button next to each item.
+5. **Checkout**: Once satisfied with your order, click the "Checkout" button to generate and view your receipt.
+
+## Project Structure
+
+```
+niot-fastfood-app/
+│
+├── src/
+│   ├── BurgersCategory.java
+│   ├── CartItem.java
+│   ├── Checkout.java
+│   ├── ChickenCategory.java
+│   ├── DrinksCategory.java
+│   ├── FastFoodApp.java
+│   ├── Item.java
+│   └── MenuCategory.java
+│
+├── screenshots/
+│   ├── banner.png
+│   ├── main_interface.png
+│   ├── adding_items.png
+│   ├── order_summary.png
+│   └── checkout_receipt.png
+│
+├── README.md
+└── pom.xml / build.gradle (if using Maven or Gradle)
 ```
 
+- **src/**: Contains all Java source files.
+- **screenshots/**: Contains images used in the README.
+- **README.md**: This documentation file.
+- **pom.xml / build.gradle**: Project configuration files for dependency management (if applicable).
+
+## Contributing
+
+Contributions are welcome! If you'd like to enhance the application, please follow these steps:
+
+1. **Fork the Repository**
+
+   Click the "Fork" button at the top right of this repository's page.
+
+2. **Create a Feature Branch**
+
+   ```bash
+   git checkout -b feature/YourFeatureName
+   ```
+
+3. **Commit Your Changes**
+
+   ```bash
+   git commit -m "Add Your Feature"
+   ```
+
+4. **Push to the Branch**
+
+   ```bash
+   git push origin feature/YourFeatureName
+   ```
+
+5. **Open a Pull Request**
+
+   Go to the original repository and click "New Pull Request."
+
+## License
+
+This project is licensed under the [MIT License](LICENSE).
+
 ---
 
-## Example
+Thank you for using the **NIOT Fast Food Ordering App**! If you encounter any issues or have suggestions for improvements, feel free to open an issue or submit a pull request.
 
-**Sample Output:**
+# Acknowledgments
 
-```
-===== NIoT RESTAURANT =====
-=====   BURGER MENU   =====
-1. Hamburger                      Solo Price: $3.00    Meal Price: $5.00
-2. Cheeseburger                   Solo Price: $3.50    Meal Price: $6.00
-...
-
-=====   CHICKEN MENU  =====
-1. Fried Chicken                  Solo Price: $8.99    Meal Price: $13.99
-...
-
-=====   DRINKS MENU   =====
-1. Coca-Cola                      Price: $2.49
-...
-
-Enter the number of the item you want to order, followed by quantity (e.g., 1 2 for 2 of item 1). Type 'done' when finished:
-1 2
-2 1
-done
-
-===== RECEIPT =====
-Hamburger                     x2 $3.00    Total: $6.00
-Cheeseburger                  x1 $3.50    Total: $3.50
-----------------------------
-Total: $9.50
-```
+- Built with [JavaFX](https://openjfx.io/) for a rich user interface experience.
+- Inspired by real-world fast food ordering systems to provide a practical example.
 
 ---
+
+*Happy Ordering! 🍔🍗🥤*
